Added actions for Loupedeck+ and CT
- Added action to Enable & Disable Loupedeck+ and CT support.
- Added action to Enable & Disable Loupedeck+ and CT support whilst
opening/quitting the official Loupedeck App.
- Fixed `decreaseOpacity` and `increaseOpacity` i18n labels.
- Added i18n labels for “Open Control Surfaces” and “Open Toolbox”.
- Closes #2292

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -584,10 +584,7 @@
         "daVinciResolve": "DaVinci Resolve",
         "decrease": "Decrease",
         "decreaseClipHeight": "Decrease Clip Height",
-        "decreaseOpacity": {
-            "one": "Decrease Opacity by %{amount} Percent",
-            "other": "Decrease Opacity by %{amount} Percent"
-        },
+        "decreaseOpacity": "Decrease Opacity by %{amount} Percent",
         "default": "Default",
         "delete": "Delete",
         "deleteAfterImport": "Delete file from Watch Folder (%{numberOfSeconds} %{seconds} after Import)",
@@ -609,6 +606,10 @@
         "difference9": "Diff",
         "disableAll": "Disable All",
         "disabled": "Disabled",
+        "disableLoupedeckCTSupport": "Disable Loupedeck CT Support",
+        "disableLoupedeckCTSupportAndLaunchLoupedeckApp": "Disable Loupedeck CT Support & Launch Loupedeck App",
+        "disableLoupedeckPlusSupport": "Disable Loupedeck+ Support",
+        "disableLoupedeckPlusSupportAndLaunchLoupedeckApp": "Disable Loupedeck+ Support & Launch Loupedeck App",
         "display": "Display",
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
         "displayThisMenuAsIcon": "Display Menubar As Icon",
@@ -653,6 +654,9 @@
         "enableiMessageNotifications": "Enable iMessage Notifications",
         "enableLoupdeckSupport": "Enable Loupedeck+ Support",
         "enableLoupedeckCTSupport": "Enable Loupedeck CT Support",
+        "enableLoupedeckCTSupportQuitLoupedeckApp": "Enable Loupedeck CT Support & Quit Loupedeck App",
+        "enableLoupedeckPlusSupport": "Enable Loupedeck+ Support",
+        "enableLoupedeckPlusSupportQuitLoupedeckApp": "Enable Loupedeck+ Support & Quit Loupedeck App",
         "enableLuaCodeProcessing": "Enable Lua Code Processing",
         "enableMIDI": "Enable MIDI Controls",
         "enablePasteboardHistory": "Enable Pasteboard History",
@@ -1077,10 +1081,7 @@
         "incomingFile": "Incoming File...",
         "increase": "Increase",
         "increaseClipHeight": "Increase Clip Height",
-        "increaseOpacity": {
-            "one": "Increase Opacity by %{amount} Percent",
-            "other": "Increase Opacity by %{amount} Percent"
-        },
+        "increaseOpacity": "Increase Opacity by %{amount} Percent",
         "individualEffects": "Individual Effects",
         "inertiaCam": "InertiaCam",
         "info": "Info",
@@ -1317,6 +1318,7 @@
         "openAudioMIDISetup": "Open Audio MIDI Setup",
         "openCommandEditor": "Open Command Editor",
         "openContacts": "Open Contacts",
+        "openControlSurfaces": "Open Control Surfaces",
         "openDebugConsole": "Open Debug Console",
         "openDebugConsoleOnDockClick": "Open Debug Console on Dock Icon Click",
         "openEmbeddedSpeechCommandsHelp": "Speech Commands Help",
@@ -1326,6 +1328,7 @@
         "openProjectAfterFind": "Open Project After Find",
         "openRecentProjectStartingWith": "Open Recent Project Starting With",
         "openTangentMapper": "Open Tangent Mapper",
+        "openToolbox": "Open Toolbox",
         "openUserSettingsFolder": "Open User Settings Folder",
         "openVoiceOverUtility": "Open Voice Over Utility",
         "optimizedOriginal": "Optimized/Original",
