Work in progress
- Added release actions for Loupedeck buttons.
- Added ability to trigger custom vibrations on Loupedeck button
releases and knob/jog wheel turns.
- Fixed missing side screen labels on Loupedeck CT preferences.
- Fixed: Loupedeck CT pixel buffer format is 5-6-5, not 5-3-5.
- Add support for Loupedeck CT wheel sensitivity.
- Added “Open Key Creator” and “Buy More Icons” buttons to Loupedeck CT
Preferences panel.
- Cleaned up `cp.apple.finalcutpro.main.PrimaryWindow`
- Added Skype Application Manager.
- Added Microsoft Teams Application Manager.
- Closes #2371
- Closes #2369
- Closes #2375

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1619,6 +1619,7 @@
         "seven": "7",
         "shadows": "Shadows",
         "shadows2": "SD",
+        "releaseAction": "Release Action",
         "shadows4": "Shdw",
         "share": "Share",
         "shared": "Shared",
@@ -1885,6 +1886,21 @@
         "vertical": "Vertical",
         "vertical4": "Vert",
         "vibrateWhenPressed": "Vibrate When Pressed",
+        "vibrateWhenReleased": "Vibrate When Released",
+        "wheelSensitivity": "Wheel Sensitivity",
+        "automaticallySwitchApplications": "Automatically Switch Applications",
+        "openKeyCreator": "Open Key Creator",
+        "buyMoreIcons": "Buy More Icons",
+        "slideActions": "Slide Actions",
+        "pressActions": "Press Actions",
+        "pressTopLeft": "Press Top Left",
+        "pressBottomLeft": "Press Bottom Left",
+        "pressTopMiddle": "Press Top Middle",
+        "pressBottomMiddle": "Press Bottom Middle",
+        "pressTopRight": "Press Top Right",
+        "pressBottomRight": "Press Bottom Right",
+        "vibrateWhenTurnedLeft": "Vibrate When Turned Left",
+        "vibrateWhenTurnedRight": "Vibrate When Turned Right",
         "video": "Video",
         "videoEffect_group": "Video Effect",
         "videoWaveform": "Video Waveform",
