Work in progress
- Fixed bug where "Copy Control to All Banks" didn’t update knob text
labels.
- Added actions for manually changing applications on the Loupedeck CT,
as well as changing and launching applications.
- Added support for changing Loupedeck CT backlight levels.
- Added Applications Managers for Disk Utility, System Preferences,
TextEdit and Zoom.
- Closes #2367
- Closes #2349
- Closes #2280
- Closes #1848
- Closes #2378

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -56,6 +56,7 @@
         "amounts": "Amounts",
         "anchor": "Anchor",
         "and": "and",
+        "andLaunch": "& Launch",
         "aNewFCPXMLHasBeenExportedSuccessfully": "A new FCPXML has been exported successfully.",
         "angle": "Angle",
         "angle3": "ANG",
@@ -95,6 +96,7 @@
         "automatic": "Automatic",
         "automaticallyCheckForUpdates": "Automatically Check for Updates",
         "automaticallyImport": "Automatically Import without Notification",
+        "automaticallySwitchApplications": "Automatically Switch Applications",
         "automaticKeyframes": "Automatic Keyframes",
         "autoMountOnAC": "Mount external drives when switching to AC power",
         "autoUnmountOnBattery": "Unmount external drives when switching to battery power",
@@ -172,6 +174,7 @@
         "buttonLabel": "Button Label",
         "buttonPress": "Button Press",
         "buttons": "Buttons",
+        "buyMoreIcons": "Buy More Icons",
         "cancel": "Cancel",
         "captureInteractive": "Capture Interactive",
         "captureInteractiveDescription": "Draw a rectangle to capture",
@@ -981,6 +984,7 @@
         "global_command_group": "All Applications",
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
         "global_loupedeckct_banks_action": "Loupedeck CT Banks",
+        "global_loupedeckctapplications_action": "Loupedeck CT Applications",
         "global_menuactions_action": "Active Application Menu Items",
         "global_midibanks_action": "MIDI Banks",
         "global_pasteboard_action": "Text Pasteboard History",
@@ -1323,6 +1327,7 @@
         "openDebugConsoleOnDockClick": "Open Debug Console on Dock Icon Click",
         "openEmbeddedSpeechCommandsHelp": "Speech Commands Help",
         "openFavouriteFolder": "Open Favourite Folder",
+        "openKeyCreator": "Open Key Creator",
         "openMessages": "Open Messages",
         "openPrivacyPolicy": "Open Privacy Policy",
         "openProjectAfterFind": "Open Project After Find",
@@ -1443,6 +1448,13 @@
         "presets": "Presets",
         "press": "Press",
         "pressAction": "Press Action",
+        "pressActions": "Press Actions",
+        "pressBottomLeft": "Press Bottom Left",
+        "pressBottomMiddle": "Press Bottom Middle",
+        "pressBottomRight": "Press Bottom Right",
+        "pressTopLeft": "Press Top Left",
+        "pressTopMiddle": "Press Top Middle",
+        "pressTopRight": "Press Top Right",
         "preventMacFromSleeping": "Prevent Mac from Sleeping",
         "previous": "Previous",
         "privacy": "Privacy",
@@ -1472,6 +1484,7 @@
         "redo": "Redo",
         "rejected": "Rejected",
         "relative": "Relative",
+        "releaseAction": "Release Action",
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
         "removeFavouriteKeyword": "Remove Favourite Keyword",
@@ -1619,7 +1632,6 @@
         "seven": "7",
         "shadows": "Shadows",
         "shadows2": "SD",
-        "releaseAction": "Release Action",
         "shadows4": "Shdw",
         "share": "Share",
         "shared": "Shared",
@@ -1701,6 +1713,7 @@
         "six": "6",
         "sixtyHz": "60Hz",
         "skip": "Skip",
+        "slideActions": "Slide Actions",
         "slideDownAction": "Slide Down Action",
         "slideLeftAction": "Slide Left Action",
         "slideRightAction": "Slide Right Action",
@@ -1759,6 +1772,7 @@
         "support": "Support",
         "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
+        "switchLoupedeckCTTo": "Switch Loupedeck CT to",
         "tag": "Tag",
         "tangent": "Tangent",
         "tangentFavouriteDescription": "You can assign any action in CommandPost to a Favourite below, which is then accessible in the Tangent Mapper.",
@@ -1887,18 +1901,6 @@
         "vertical4": "Vert",
         "vibrateWhenPressed": "Vibrate When Pressed",
         "vibrateWhenReleased": "Vibrate When Released",
-        "wheelSensitivity": "Wheel Sensitivity",
-        "automaticallySwitchApplications": "Automatically Switch Applications",
-        "openKeyCreator": "Open Key Creator",
-        "buyMoreIcons": "Buy More Icons",
-        "slideActions": "Slide Actions",
-        "pressActions": "Press Actions",
-        "pressTopLeft": "Press Top Left",
-        "pressBottomLeft": "Press Bottom Left",
-        "pressTopMiddle": "Press Top Middle",
-        "pressBottomMiddle": "Press Bottom Middle",
-        "pressTopRight": "Press Top Right",
-        "pressBottomRight": "Press Bottom Right",
         "vibrateWhenTurnedLeft": "Vibrate When Turned Left",
         "vibrateWhenTurnedRight": "Vibrate When Turned Right",
         "video": "Video",
@@ -1916,6 +1918,7 @@
         "viewRedColorChannel": "View Red Color Channel",
         "viewStillsMemory": "View Stills Memory",
         "virtual": "Virtual",
+        "screensBacklightLevel": "Screens Backlight Level",
         "virtualTouchBar": "Virtual Touch Bar",
         "visibility": "Visibility",
         "visitTangentWebsite": "Visit Tangent Website",
@@ -1941,6 +1944,7 @@
         "whatStepsToRecreate": "What are the steps to recreate the problem?",
         "whatWentWrong": "What went wrong?",
         "wheels": "Wheels",
+        "wheelSensitivity": "Wheel Sensitivity",
         "white": "White",
         "wholeWords": "Whole Words",
         "width": "Width",
