--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -613,6 +613,7 @@
         "disableLoupedeckCTSupportAndLaunchLoupedeckApp": "Disable Loupedeck CT Support & Launch Loupedeck App",
         "disableLoupedeckPlusSupport": "Disable Loupedeck+ Support",
         "disableLoupedeckPlusSupportAndLaunchLoupedeckApp": "Disable Loupedeck+ Support & Launch Loupedeck App",
+        "diskutility_application_manager_label": "Application Manager",
         "display": "Display",
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
         "displayThisMenuAsIcon": "Display Menubar As Icon",
@@ -1167,6 +1168,7 @@
         "loadCSVData": "Load CSV Data",
         "loadFCPXMLTemplate": "Load FCPXML Template",
         "loadFromPasteboard": "Load from Pasteboard",
+        "loading": "Loading",
         "localMachine": "Local Machine",
         "localPasteboardHistory": "Local Pasteboard History",
         "location": "Location",
@@ -1214,6 +1216,7 @@
         "merge": "Merge",
         "method": "Method",
         "methods": "Methods",
+        "microsoftteams_application_manager_label": "Application Manager",
         "middle": "Middle",
         "midi": "MIDI",
         "midiBankDescription": "Changes the MIDI Control Bank",
@@ -1411,11 +1414,17 @@
         "plugin_group_colorfinale": "ColorFinale",
         "plugin_group_compressor": "Compressor",
         "plugin_group_core": "Core",
+        "plugin_group_diskutility": "Disk Utility",
         "plugin_group_finalcutpro": "Final Cut Pro",
         "plugin_group_finder": "Finder",
+        "plugin_group_microsoftteams": "Microsoft Teams",
         "plugin_group_motion": "Motion",
         "plugin_group_plugin": "Plugin",
         "plugin_group_resolve": "DaVinci Resolve",
+        "plugin_group_skype": "Skype",
+        "plugin_group_systempreferences": "System Preferences",
+        "plugin_group_textedit": "TextEdit",
+        "plugin_group_zoom": "Zoom",
         "plugin_status_active": "Active",
         "plugin_status_disabled": "Disabled",
         "plugin_status_error": "Failed",
@@ -1449,6 +1458,7 @@
         "press": "Press",
         "pressAction": "Press Action",
         "pressActions": "Press Actions",
+        "pressAndHold": "Press and hold",
         "pressBottomLeft": "Press Bottom Left",
         "pressBottomMiddle": "Press Bottom Middle",
         "pressBottomRight": "Press Bottom Right",
@@ -1484,6 +1494,7 @@
         "redo": "Redo",
         "rejected": "Rejected",
         "relative": "Relative",
+        "release": "Release",
         "releaseAction": "Release Action",
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
@@ -1493,6 +1504,7 @@
         "renameButtonQuestion": "What would you like to rename this button to?",
         "renameClip": "Rename Clip",
         "renderComplete": "Render Complete!",
+        "repeatPressActionUntilReleased": "Repeat Press Action Until Released",
         "replace": "Replace",
         "replaceAll": "Replace All",
         "replaceExistingFiles": "Replace Existing Files",
@@ -1562,6 +1574,7 @@
         "screen": "Screen",
         "screen9": "Screen",
         "screenRecordingNote": "CommandPost requires <strong>Screen Recording</strong> permission on macOS Catalina to detect the state of various user interface elements - for example, to detect when Final Cut Pro is playing or stopped. We also allow users to <strong>optionally</strong> share screenshots when submitting feedback.<br /><br />To continue, please press <strong>Allow Screen Recording</strong>, which will open System Preferences allowing you to grant CommandPost Screen Recording permission. CommandPost will automatically restart once granted permission.",
+        "screensBacklightLevel": "Screens Backlight Level",
         "scripting": "Scripting",
         "scriptingTools": "Scripting Tools",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
@@ -1713,6 +1726,9 @@
         "six": "6",
         "sixtyHz": "60Hz",
         "skip": "Skip",
+        "skype_application_manager_label": "Application Manager",
+        "skype_shortcuts_action": "Skype Shortcuts",
+        "skype_shortcuts_label": "Shortcuts",
         "slideActions": "Slide Actions",
         "slideDownAction": "Slide Down Action",
         "slideLeftAction": "Slide Left Action",
@@ -1773,6 +1789,7 @@
         "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
         "switchLoupedeckCTTo": "Switch Loupedeck CT to",
+        "systempreferences_application_manager_label": "Application Manager",
         "tag": "Tag",
         "tangent": "Tangent",
         "tangentFavouriteDescription": "You can assign any action in CommandPost to a Favourite below, which is then accessible in the Tangent Mapper.",
@@ -1788,6 +1805,7 @@
         "ten": "10",
         "testTitle": "CommandPost Test",
         "text": "Text",
+        "textedit_application_manager_label": "Application Manager",
         "textInspectorCouldNotBeShown": "Text Inspector could not be shown.",
         "textLabel": "Text Label",
         "textLayer": "Text Layer",
@@ -1918,8 +1936,6 @@
         "viewRedColorChannel": "View Red Color Channel",
         "viewStillsMemory": "View Stills Memory",
         "virtual": "Virtual",
-        "screensBacklightLevel": "Screens Backlight Level",
-        "repeatPressActionUntilReleased": "Repeat Press Action Until Released",
         "virtualTouchBar": "Virtual Touch Bar",
         "visibility": "Visibility",
         "visitTangentWebsite": "Visit Tangent Website",
@@ -1957,6 +1973,7 @@
         "youCannotDragItemsBetweenDifferentControlTypes": "You cannot drag items between different control types.",
         "youCannotDragItemsBetweenDifferentControlTypesDescription": "Currently you can only drag items of the same control type (i.e. button to button, or knob to knob). Please try again.",
         "zoom": "Zoom",
+        "zoom_application_manager_label": "Application Manager",
         "zoomSlider": "Zoom Slider",
         "zoomSliderDescription": "Allows you to control timeline zoom.",
         "zoomToFit": "Zoom to Fit",
