--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1820,6 +1820,8 @@
         "theSuppliedFCPXMLDidNotPassDtdValidationPleaseCheckThatTheFCPXMLSuppliedIsValidAndTryAgain": "The supplied FCPXML did not pass DTD validation. Please check that the FCPXML supplied is valid and try again.",
         "thisCanTakeSeveralMinutes": "This can take several minutes",
         "thisIsATest": "This is a test",
+        "thisWillOnlyTriggerThePauseShortcutKeyIfAlreadyPlaying": "This will only trigger the pause shortcut key if already playing.",
+        "thisWillOnlyTriggerThePlayShortcutKeyIfAlreadyStopped": "This will only trigger the play shortcut key if already stopped.",
         "three": "3",
         "threeDeeText": "3D Text",
         "timeline": "Timeline",
