* worked around changes in axuielement:buildTree to fix error when inspecting * Updated KeywordEditor * Bug fixes * Added "keywordPresetInvalid" I18N keyword in English only.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1134,6 +1134,7 @@
         "keyframe": "Keyframe",
         "keywordEditorNotOpened": "The Keyword Editor could not be opened.",
         "keywordKeyboardShortcutsNotOpened": "The Keyword Editor's Keyboard Shortcuts section could not be opened.",
+        "keywordPresetInvalid": "Invalid Keyword Preset number: ${preset}",
         "keywordPresetsRestored": "Your Keywords have been restored to Preset",
         "keywordPresetsSaved": "Your Keywords have been saved to Preset",
         "label": "Label",
