Added support for the original Loupedeck
- Closes #2389

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -311,6 +311,7 @@
         "core_helpandsupport_feedback_label": "Help & Support: Feedback",
         "core_helpandsupport_userguide_label": "Help & Support: User Guide",
         "core_language_label": "Language Module",
+        "core_loupedeck_prefs_label": "Preferences: Loupedeck",
         "core_loupedeckct_manager_label": "Loupedeck CT Manager",
         "core_loupedeckct_prefs_label": "Preferences: Loupedeck CT",
         "core_loupedeckplus_banks_label": "Loupedeck+: Banks",
@@ -613,6 +614,8 @@
         "disableLoupedeckCTSupportAndLaunchLoupedeckApp": "Disable Loupedeck CT Support & Launch Loupedeck App",
         "disableLoupedeckPlusSupport": "Disable Loupedeck+ Support",
         "disableLoupedeckPlusSupportAndLaunchLoupedeckApp": "Disable Loupedeck+ Support & Launch Loupedeck App",
+        "disableLoupedeckSupport": "Disable Loupedeck Support",
+        "disableLoupedeckSupportAndLaunchLoupedeckApp": "Disable Loupedeck Support & Launch Loupedeck App",
         "diskutility_application_manager_label": "Application Manager",
         "display": "Display",
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
@@ -656,11 +659,12 @@
         "enableFlashDrive": "Enable Flash Drive",
         "enableHUD": "Enable HUD",
         "enableiMessageNotifications": "Enable iMessage Notifications",
-        "enableLoupdeckSupport": "Enable Loupedeck+ Support",
+        "enableLoupdeckSupport": "Enable Loupedeck Support",
         "enableLoupedeckCTSupport": "Enable Loupedeck CT Support",
         "enableLoupedeckCTSupportQuitLoupedeckApp": "Enable Loupedeck CT Support & Quit Loupedeck App",
         "enableLoupedeckPlusSupport": "Enable Loupedeck+ Support",
         "enableLoupedeckPlusSupportQuitLoupedeckApp": "Enable Loupedeck+ Support & Quit Loupedeck App",
+        "enableLoupedeckSupportQuitLoupedeckApp": "Enable Loupedeck Support & Quit Loupedeck App",
         "enableLuaCodeProcessing": "Enable Lua Code Processing",
         "enableMIDI": "Enable MIDI Controls",
         "enablePasteboardHistory": "Enable Pasteboard History",
@@ -985,6 +989,7 @@
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
+        "global_loupedeck_banks_action": "Loupedeck Banks",
         "global_loupedeckct_banks_action": "Loupedeck CT Banks",
         "global_loupedeckctapplications_action": "Loupedeck CT Applications",
         "global_menuactions_action": "Active Application Menu Items",
@@ -1179,8 +1184,10 @@
         "loopSearch": "Loop Search",
         "loudness": "Loudness",
         "loudness9": "Loudness",
+        "loupedeck": "Loupedeck",
         "loupedeckAppTip": "The official Loupedeck application is not compatible with CommandPost and can't be used at the same time.",
-        "loupedeckBankDescription": "Changes the Loupedeck+ Bank",
+        "loupedeckBankDescription": "Changes the Loupedeck Bank",
+        "loupedeckPlusBankDescription": "Changes the Loupedeck+ Bank",
         "loupedeckCT": "Loupedeck CT",
         "loupedeckCTBankDescription": "Changes the Loupedeck CT Bank",
         "loupedeckCTResetAllConfirmation": "This will reset all Loupedeck CT items across all applications to the default values.",
