Fixed AudioSwift MIDI Support
- Restored “Note Off” support to MIDI Preferences
- Fixed AudioSwift Support
- Added a simple AudioSwift Preferences panel to raise user awareness
- Closes #2410

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -93,6 +93,10 @@
         "audioCrossfade": "Audio Crossfade",
         "audioEffect_group": "Audio Effect",
         "audioEnhancements": "Audio Enhancements",
+        "audioSwift": "AudioSwift",
+        "audioSwiftDescriptionOne": "AudioSwift allows you to use your MacBook Pro Trackpad and Magic Trackpad as a control surface.",
+        "audioSwiftDescriptionThree": "You can setup AudioSwift in the MIDI Preferences Panel using the 'Learn' feature.",
+        "audioSwiftDescriptionTwo": "It has several modes, so you can use it for sliders, buttons and two axis controls (such as for colour wheels).",
         "automatic": "Automatic",
         "automaticallyCheckForUpdates": "Automatically Check for Updates",
         "automaticallyImport": "Automatically Import without Notification",
@@ -618,6 +622,7 @@
         "disableLoupedeckSupportAndLaunchLoupedeckApp": "Disable Loupedeck Support & Launch Loupedeck App",
         "diskutility_application_manager_label": "Application Manager",
         "display": "Display",
+        "displayMessageWhenChangingBanks": "Display Message When Changing Banks",
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
         "displayThisMenuAsIcon": "Display Menubar As Icon",
         "distance": "Distance",
@@ -626,6 +631,7 @@
         "done": "Done",
         "doubleTap": "Double Tap",
         "down": "Down",
+        "downloadAudioSwift": "Download AudioSwift",
         "downloadTangentHub": "Download Tangent Hub",
         "doYouWantToContinue": "Do you want to continue?",
         "draggable": "Draggable",
@@ -666,7 +672,7 @@
         "enableLoupedeckPlusSupportQuitLoupedeckApp": "Enable Loupedeck+ Support & Quit Loupedeck App",
         "enableLoupedeckSupportQuitLoupedeckApp": "Enable Loupedeck Support & Quit Loupedeck App",
         "enableLuaCodeProcessing": "Enable Lua Code Processing",
-        "enableMIDI": "Enable MIDI Controls",
+        "enableMIDI": "Enable MIDI Support",
         "enablePasteboardHistory": "Enable Pasteboard History",
         "enableProwlNotifications": "Enable Prowl Notifications",
         "enablePushoverNotifications": "Enable Pushover Notifications",
@@ -988,8 +994,8 @@
         "global_applications_action": "Applications",
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
-        "global_loupedeckbanks_action": "Loupedeck+ Banks",
         "global_loupedeck_banks_action": "Loupedeck Banks",
+        "global_loupedeckbanks_action": "Loupedeck+ Banks",
         "global_loupedeckct_banks_action": "Loupedeck CT Banks",
         "global_loupedeckctapplications_action": "Loupedeck CT Applications",
         "global_menuactions_action": "Active Application Menu Items",
@@ -1187,7 +1193,6 @@
         "loupedeck": "Loupedeck",
         "loupedeckAppTip": "The official Loupedeck application is not compatible with CommandPost and can't be used at the same time.",
         "loupedeckBankDescription": "Changes the Loupedeck Bank",
-        "loupedeckPlusBankDescription": "Changes the Loupedeck+ Bank",
         "loupedeckCT": "Loupedeck CT",
         "loupedeckCTBankDescription": "Changes the Loupedeck CT Bank",
         "loupedeckCTResetAllConfirmation": "This will reset all Loupedeck CT items across all applications to the default values.",
@@ -1196,6 +1201,7 @@
         "loupedeckCTStoreSettingsOnFlashDriveLineOne": "<strong>Store settings on Flash Drive</strong> is enabled, but no Loupedeck CT is detected.",
         "loupedeckCTStoreSettingsOnFlashDriveLineTwo": "Please connect your Loupedeck CT to allow configuration.",
         "loupedeckPlus": "Loupedeck+",
+        "loupedeckPlusBankDescription": "Changes the Loupedeck+ Bank",
         "loupedeckResetAllConfirmation": "This will reset all Loupedeck+ items across all applications to the default values.",
         "loupedeckResetGroupConfirmation": "This will reset all Loupedeck+ items in the current application to the default values.",
         "loupedeckResetSubGroupConfirmation": "This will reset all Loupedeck+ items in the current bank to the default values.",
