Added and action to control Timeline Zoom
- Fixed some documentation bugs as well.
- Closes #2395

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -281,6 +281,7 @@
         "controlFCPUIElementAbsolute": "Control Final Cut Pro User Interface Element (Absolute)",
         "controlFCPUIElementRelative": "Control Final Cut Pro User Interface Element (Relative)",
         "controlFCPUIElementRelativeNote": "Hover mouse over a UI Element, hold CONTROL, then adjust MIDI Knob/Fader to register.",
+        "controlsTimelineZoomViaTheAppearancePopup": "Controls Timeline Zoom via the Appearance Popup",
         "controlSurfaces": "Control Surfaces",
         "copy": "Copy",
         "copyActiveApplicationTo": "Copy Active Application To",
@@ -298,6 +299,7 @@
         "core_accessibility_screenrecording_label": "Screen Recording Permissions",
         "core_action_manager_label": "Manager: Actions",
         "core_application_manager_label": "Application Manager",
+        "core_audioswift_prefs_label": "Preferences: AudioSwift",
         "core_commands_actions_label": "Commands Actions",
         "core_commands_global_label": "Global Commands",
         "core_console_applications_label": "Console: Applications",
@@ -316,6 +318,7 @@
         "core_helpandsupport_userguide_label": "Help & Support: User Guide",
         "core_language_label": "Language Module",
         "core_loupedeck_prefs_label": "Preferences: Loupedeck",
+        "core_loupedeckct_changeapplications_label": "Loupedeck CT Applications",
         "core_loupedeckct_manager_label": "Loupedeck CT Manager",
         "core_loupedeckct_prefs_label": "Preferences: Loupedeck CT",
         "core_loupedeckplus_banks_label": "Loupedeck+: Banks",
@@ -931,6 +934,7 @@
         "finalcutpro_timeline_transcode_label": "Timeline: Transcode",
         "finalcutpro_timeline_transitions_label": "Timeline: Transitions",
         "finalcutpro_timeline_videoeffects_label": "Timeline: Video Effects",
+        "finalcutpro_timeline_zoom_label": "Timeline: Zoom",
         "finalcutpro_timeline_zoomtoselection_label": "Timeline: Zoom to Selection",
         "finalcutpro_toolbox_fcpxmltitles_label": "Toolbox: FCPXML Titles",
         "finalcutpro_touchbar_manager_label": "Manager: Touch Bar",
