Various MIDI bug fixes and improvements
- You can now use a velocity value for the “Note Off” and “Note On”
commands. Velocity is now detected by the “Learn” button.
- The MIDI bank functions now ignore AudioSwift if it is the frontmost
app.
- Fixed typo in “Volume (Absolute)” action.
- Added relative MIDI colour board controls.
- Fixed bug in MIDI zoom action.
- Fixed bug which prevented MIDI commands from working if you manually
entered them in the MIDI Preferences panel.
- Closes #2421

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1055,6 +1055,7 @@
         "history": "History",
         "historyIsEmpty": "History is empty",
         "historySize": "History Size",
+        "holdDownShiftToChangeValueAtFinerSmallerIncrements": "Hold down SHIFT to change value at finer/smaller increments.",
         "holdDownShortcutKeyToRepeatAction": "Hold down shortcut key to repeat action.",
         "horizontal": "Horizontal",
         "horizontal4": "Horz",
