Added more Relative A MIDI Actions
- Added Relative A MIDI controls for the Color Board & Color Wheels.
- Added `cp.tools.optionPressed()`.
- Added a default Search Console toolbar icon for Loupedeck Banks.
- Stopped pre-loading choices for the Search Console.
- Closes #2423

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1055,7 +1055,7 @@
         "history": "History",
         "historyIsEmpty": "History is empty",
         "historySize": "History Size",
-        "holdDownShiftToChangeValueAtFinerSmallerIncrements": "Hold down SHIFT to change value at finer/smaller increments.",
+        "holdDownShiftToChangeValueAtSmallerIncrementsAndOptionToReset": "Hold down SHIFT to change value at smaller increments & OPTION to reset.",
         "holdDownShortcutKeyToRepeatAction": "Hold down shortcut key to repeat action.",
         "horizontal": "Horizontal",
         "horizontal4": "Horz",
@@ -1513,6 +1513,7 @@
         "redo": "Redo",
         "rejected": "Rejected",
         "relative": "Relative",
+        "relativeA": "Relative A",
         "release": "Release",
         "releaseAction": "Release Action",
         "reload": "Reload",
@@ -1543,9 +1544,16 @@
         "resetDevice": "Reset Device",
         "resetEverything": "Reset Everything",
         "resetIncrementalNumber": "Reset Incremental Number",
+        "resetsAColorWheelUsingAMIDIDevice": "Resets a Color Wheel using a MIDI device.",
+        "resetsBrightnessUsingAMIDIDevice": "Resets the Brightness using a MIDI Device.",
         "resetSelectedControl": "Reset Selected Control",
         "resetShortcuts": "Reset to Default Shortcuts",
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
+        "resetsHueUsingAMIDIDevice": "Resets the Hue using a MIDI Device.",
+        "resetsMixUsingAMIDIDevice": "Resets the Mix using a MIDI Device.",
+        "resetsSaturationUsingAMIDIDevice": "Resets the Saturation using a MIDI Device.",
+        "resetsTemperatureUsingAMIDIDevice": "Resets the Temperature using a MIDI Device.",
+        "resetsTintUsingAMIDIDevice": "Resets the Tint using a MIDI Device.",
         "resetUnit": "Reset Unit",
         "resolve_application_manager_label": "Application Manager",
         "resolve_group": "DaVinci Resolve",
