Order Search Console Sections by Application
- Renamed “Sections” to “Show Action Groups”.
- We now seperate “Sections” by application.
- Added any installed Keyboard Maestro Macros to the Search Console.
- Added Search Console Toolbar Icon for Keyboard Maestro Macros.
- Closes #2425
- Closes #2428

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -303,6 +303,7 @@
         "core_commands_actions_label": "Commands Actions",
         "core_commands_global_label": "Global Commands",
         "core_console_applications_label": "Console: Applications",
+        "core_console_keyboardmaestromacros_label": "Keyboard Maestro Macros",
         "core_console_label": "Console",
         "core_console_scripts_label": "Console: Scripts",
         "core_controlsurfaces_manager_label": "Control Surfaces Manager",
@@ -998,6 +999,7 @@
         "global_applications_action": "Applications",
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
+        "global_keyboardmaestro_macros_action": "Keyboard Maestro Macros",
         "global_loupedeck_banks_action": "Loupedeck Banks",
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
         "global_loupedeckct_banks_action": "Loupedeck CT Banks",
@@ -1736,6 +1738,7 @@
         "shortcutsResetConfirmation": "This will reset all modified shortcuts to the default values.",
         "shortcutsSetNoneConfirmation": "This will reset all of the shortcuts to None.",
         "show": "Show",
+        "showActionGroups": "Show Action Groups",
         "showAll": "Show All",
         "showGenerators": "Show Generators",
         "showHiddenFCPXMLExportOptions": "Show Hidden FCPXML Export Options",
@@ -1755,7 +1758,8 @@
         "sixtyHz": "60Hz",
         "skip": "Skip",
         "skype_application_manager_label": "Application Manager",
-        "skype_shortcuts_action": "Skype Shortcuts",
+        "skype_command_group": "Skype",
+        "skype_shortcuts_action": "Shortcuts",
         "skype_shortcuts_label": "Shortcuts",
         "slideActions": "Slide Actions",
         "slideDownAction": "Slide Down Action",
