Added Placeholder Preferences Panels for upcoming Control Surfaces
- Added placeholder preferences panels for Gamepad, Monogram and
TourBox.
- Closes #2430

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -310,6 +310,7 @@
         "core_disk_automount_label": "Disk Automount",
         "core_disk_favourites_label": "Disk Favourites",
         "core_display_label": "Display Brightness Actions",
+        "core_gamepad_prefs_label": "Preferences: Gamepad",
         "core_helpandsupport_credits_label": "Help & Support: Credits",
         "core_helpandsupport_debugconsole_label": "Help & Support: Debug Console",
         "core_helpandsupport_developerguide_label": "Help & Support: Developer Guide",
@@ -336,6 +337,7 @@
         "core_midi_controls_banks_label": "MIDI: Banks",
         "core_midi_manager_label": "Manager: MIDI",
         "core_midi_prefs_label": "Preferences Panel: MIDI",
+        "core_monogram_prefs_label": "Preferences: Monogram",
         "core_preferences_advanced_label": "Preferences: Advanced",
         "core_preferences_general_label": "Preferences: General",
         "core_preferences_generate_label": "Preferences: Generate",
@@ -377,6 +379,7 @@
         "core_touchbar_virtual_label": "Manager: Virtual Touch Bar",
         "core_touchbar_widgets_volume_label": "Widget: Volume Slider",
         "core_touchbar_widgets_windowslide_label": "Widget: Window Slider",
+        "core_tourbox_prefs_label": "Preferences: TourBox",
         "core_watchfolders_manager_label": "Manager: Watch Folders",
         "core_watchfolders_menuitem_label": "Watch Folder Menu Item",
         "correctSpellingAutomatically": "Correct Spelling Automatically",
@@ -987,6 +990,7 @@
         "fullFrame": "Full Frame",
         "fullName": "Full Name",
         "functions": "Functions",
+        "gamepad": "Gamepad",
         "general": "General",
         "generalPanelLabel": "General",
         "generalPanelTooltip": "General Preferences",
@@ -1271,6 +1275,7 @@
         "modifierKey": "Modifier Key",
         "modifyProject": "Modify Project",
         "monitor": "Monitor",
+        "monogram": "Monogram",
         "motion_application_manager_label": "Application Manager",
         "motion_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
         "mountExternalDrives_title": "Mount External Drives",
@@ -1899,6 +1904,7 @@
         "touchBarResetSubGroupConfirmation": "This will reset all the Touch Bar items in the current bank to the default values.",
         "touchBarSetupTip": "Make sure \"App Controls with Control Strip\" is selected within the \"Touch Bar shows\" Keyboard System Preferences to see the CommandPost icon.<br />You can then tap this icon to toggle through the different Touch Bar groups.",
         "touchBarWidget": "Touch Bar Widget",
+        "tourBox": "TourBox",
         "transform": "Transform",
         "transition": "Transition",
         "transition_group": "Transition",
