Various bug fixes in Relative A MIDI Controls
- Fixed issue in FCPX API for controlling Hue, Tint & Temperature.
- Fixed issue when resetting Color Board controls.
- Fixed issue when resetting Brightness with the OPTION key.
- Fixed issue when resetting Mix with OPTION key.
- Fixed temperature increments.
- Fixed tint increments.
- Fixed hue increments.
- Fixed mix increments.
- Added action for resetting Color Wheel, Saturation & Brightness.
- Closes #2432

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1562,6 +1562,8 @@
         "resetsTemperatureUsingAMIDIDevice": "Resets the Temperature using a MIDI Device.",
         "resetsTintUsingAMIDIDevice": "Resets the Tint using a MIDI Device.",
         "resetUnit": "Reset Unit",
+        "resetWheel": "Reset Wheel",
+        "resetWheelSaturationAndBrightness": "Reset Wheel, Saturation & Brightness",
         "resolve_application_manager_label": "Application Manager",
         "resolve_group": "DaVinci Resolve",
         "resolve_manager_label": "Resolve Manager",
