Work in progress
- Initial commit for TourBox Support.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -637,6 +637,9 @@
         "dockIcon": "Dock Icon",
         "done": "Done",
         "doubleTap": "Double Tap",
+        "doubleClick": "Double Click",
+        "doubleClickPressAction": "Double Click Press Action",
+        "doubleClickReleaseAction": "Double Click Release Action",
         "down": "Down",
         "downloadAudioSwift": "Download AudioSwift",
         "downloadTangentHub": "Download Tangent Hub",
@@ -674,6 +677,7 @@
         "enableiMessageNotifications": "Enable iMessage Notifications",
         "enableLoupdeckSupport": "Enable Loupedeck Support",
         "enableLoupedeckCTSupport": "Enable Loupedeck CT Support",
+        "enableTourBoxSupport": "Enable TourBox Support",
         "enableLoupedeckCTSupportQuitLoupedeckApp": "Enable Loupedeck CT Support & Quit Loupedeck App",
         "enableLoupedeckPlusSupport": "Enable Loupedeck+ Support",
         "enableLoupedeckPlusSupportQuitLoupedeckApp": "Enable Loupedeck+ Support & Quit Loupedeck App",
@@ -1203,6 +1207,7 @@
         "loudness9": "Loudness",
         "loupedeck": "Loupedeck",
         "loupedeckAppTip": "The official Loupedeck application is not compatible with CommandPost and can't be used at the same time.",
+        "tourBoxAppTip": "The official TourBox application is not compatible with CommandPost and can't be used at the same time.",
         "loupedeckBankDescription": "Changes the Loupedeck Bank",
         "loupedeckCT": "Loupedeck CT",
         "loupedeckCTBankDescription": "Changes the Loupedeck CT Bank",
